fixes arrow gap

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -336,7 +336,7 @@ hr.whitehr {width:97%; border-bottom:1px solid #fff; border-left:0 none; border-
 .slick-dots li button:before{font-size: 11px;}
 .slick-slider{margin-bottom: 0px}
 .slick-arrow{width: 44px;height: 44px;}
-.slick-prev-wrapper{cursor:pointer;position: absolute;right: 5%;top: 33%;z-index: 5}
+.slick-prev-wrapper{cursor:pointer;position: absolute;right: 5%;top: 27%;z-index: 5}
 .slick-next-wrapper{cursor:pointer;position: absolute;right: 5%;top: 50%;z-index: 5}
 
 .container-fluid.process{margin: 4.5%;background-color: #eee;padding-top: 80px;}
@@ -631,6 +631,7 @@ Main Components
 .extra-info-box__info{position:absolute;right:10%;bottom:0;padding-bottom:10%;}
 .project-mascott{display: none;}
 @media (min-width:768px){ 
+  .slick-prev-wrapper{top: 33%;}
   .project-mascott{display: block;}
   .scene.mascott.purple{left: -35%;} 
 .scene.mascott.blue{left: -35%;} 
